--- a/IdentityWebApp/IdentityWebApp.csproj
+++ b/IdentityWebApp/IdentityWebApp.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Admin\Identities\" />
+  </ItemGroup>
+
 </Project>
